# CourseWork

./: .gitattributes  .gitignore  CMakeLists.txt  Data.cpp  Entry.cpp  README.md  bgproc.cpp  booker.cpp  books.txt  fort.hpp  func.cpp  header.h  main.cpp  pch.cpp  pch.h  sha256.cpp  sha256.h  table_printer.cpp  table_printer.h  utility.cpp  Бланк задания ОКП  2020 весна.docx
Files_examples/: admin.txt  authors.txt  books.txt  genres.txt
